tests/models/struct/unnamed/i32/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1.0)]
    i32
);
fn main() {}
